更新项目接口文档和统一返回码结构，优化代码结构和减少臃肿代码量。
